# faster-python-example

./: clib.c  clib_wrap.py  main.py  pyproject.toml
